// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommandPalette > RTL rendering > renders correctly in LTR direction 1`] = `
<div
  aria-describedby="radix-«r4l»"
  aria-label="Command Palette"
  aria-labelledby="radix-«r4k»"
  aria-modal="true"
  class="fixed top-[50%] left-[50%] z-50 w-full translate-x-[-50%] translate-y-[-50%] rounded-3xl bg-popover mx-4 shadow-xl duration-200 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 max-w-lg overflow-hidden p-0 gap-0"
  data-slot="dialog-content"
  data-state="open"
  id="radix-«r4j»"
  role="dialog"
  tabindex="-1"
>
  <h2
    class="text-lg font-semibold text-foreground sr-only"
    data-slot="dialog-title"
    id="radix-«r4k»"
  >
    Command Palette
  </h2>
  <div
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r4o»"
      id="radix-«r4n»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Clinical Command Palette
    </label>
    <input
      aria-autocomplete="list"
      aria-controls="radix-«r4m»"
      aria-expanded="true"
      aria-labelledby="radix-«r4n»"
      autocomplete="off"
      autocorrect="off"
      class="w-full border-b border-border bg-transparent px-4 py-3 text-base font-medium text-foreground outline-none placeholder:text-muted-foreground"
      cmdk-input=""
      id="radix-«r4o»"
      placeholder="Search clinical actions..."
      role="combobox"
      spellcheck="false"
      type="text"
      value=""
    />
    <div
      aria-label="Suggestions"
      class="max-h-72 overflow-y-auto p-2"
      cmdk-list=""
      id="radix-«r4m»"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="px-2 py-1 text-xs font-semibold uppercase tracking-wide text-muted-foreground"
          cmdk-group=""
          data-value="Clinical Sections"
          role="presentation"
        >
          <div
            aria-hidden="true"
            cmdk-group-heading=""
            id="radix-«r4q»"
          >
            Clinical Sections
          </div>
          <div
            aria-labelledby="radix-«r4q»"
            cmdk-group-items=""
            role="group"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="true"
              data-value="vitals"
              id="radix-«r4r»"
              role="option"
            >
              <span>
                Vitals
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                V
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="subjective"
              id="radix-«r4s»"
              role="option"
            >
              <span>
                Subjective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                S
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="objective"
              id="radix-«r4t»"
              role="option"
            >
              <span>
                Objective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                O
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="assessment"
              id="radix-«r4u»"
              role="option"
            >
              <span>
                Assessment
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                A
              </kbd>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3 border-t border-border px-4 py-2 text-xs text-muted-foreground"
    >
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↑↓
        </kbd>
         Navigate
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↵
        </kbd>
         Select
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          Esc
        </kbd>
         Close
      </span>
    </div>
  </div>
  <button
    class="absolute top-4 right-4 rounded-full p-1 text-muted-foreground hover:text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-ring"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
    <span
      class="sr-only"
    >
      Close
    </span>
  </button>
</div>
`;

exports[`CommandPalette > RTL rendering > renders correctly in RTL direction 1`] = `
<div
  aria-describedby="radix-«r49»"
  aria-label="Command Palette"
  aria-labelledby="radix-«r48»"
  aria-modal="true"
  class="fixed top-[50%] left-[50%] z-50 w-full translate-x-[-50%] translate-y-[-50%] rounded-3xl bg-popover mx-4 shadow-xl duration-200 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 max-w-lg overflow-hidden p-0 gap-0"
  data-slot="dialog-content"
  data-state="open"
  id="radix-«r47»"
  role="dialog"
  tabindex="-1"
>
  <h2
    class="text-lg font-semibold text-foreground sr-only"
    data-slot="dialog-title"
    id="radix-«r48»"
  >
    Command Palette
  </h2>
  <div
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r4c»"
      id="radix-«r4b»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Clinical Command Palette
    </label>
    <input
      aria-autocomplete="list"
      aria-controls="radix-«r4a»"
      aria-expanded="true"
      aria-labelledby="radix-«r4b»"
      autocomplete="off"
      autocorrect="off"
      class="w-full border-b border-border bg-transparent px-4 py-3 text-base font-medium text-foreground outline-none placeholder:text-muted-foreground"
      cmdk-input=""
      id="radix-«r4c»"
      placeholder="Search clinical actions..."
      role="combobox"
      spellcheck="false"
      type="text"
      value=""
    />
    <div
      aria-label="Suggestions"
      class="max-h-72 overflow-y-auto p-2"
      cmdk-list=""
      id="radix-«r4a»"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="px-2 py-1 text-xs font-semibold uppercase tracking-wide text-muted-foreground"
          cmdk-group=""
          data-value="Clinical Sections"
          role="presentation"
        >
          <div
            aria-hidden="true"
            cmdk-group-heading=""
            id="radix-«r4e»"
          >
            Clinical Sections
          </div>
          <div
            aria-labelledby="radix-«r4e»"
            cmdk-group-items=""
            role="group"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="true"
              data-value="vitals"
              id="radix-«r4f»"
              role="option"
            >
              <span>
                Vitals
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                V
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="subjective"
              id="radix-«r4g»"
              role="option"
            >
              <span>
                Subjective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                S
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="objective"
              id="radix-«r4h»"
              role="option"
            >
              <span>
                Objective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                O
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="assessment"
              id="radix-«r4i»"
              role="option"
            >
              <span>
                Assessment
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                A
              </kbd>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3 border-t border-border px-4 py-2 text-xs text-muted-foreground"
    >
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↑↓
        </kbd>
         Navigate
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↵
        </kbd>
         Select
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          Esc
        </kbd>
         Close
      </span>
    </div>
  </div>
  <button
    class="absolute top-4 right-4 rounded-full p-1 text-muted-foreground hover:text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-ring"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
    <span
      class="sr-only"
    >
      Close
    </span>
  </button>
</div>
`;
